@@ -80,20 +80,23 @@ of the reciprocal condition number if requested.\n\
       if (! error_state)
 	{
 	  int info;
-	  volatile double rcond = 0.0;
-
+	  double rcond = 0.0;
 
 	  if (nargout > 1)
 	    {
 	      DET det = m.determinant (info, rcond);
 	      retval(1) = rcond;
-	      retval(0) = ((info == -1 || 1.0 + rcond == 1.0)
+	      volatile double xrcond = rcond;
+	      xrcond += 1.0;
+	      retval(0) = ((info == -1 || xrcond == 1.0)
 			   ? 0.0 : det.value ());
 	    }
 	  else
 	    {
 	      DET det = m.determinant (info);
-	      retval(0) = ((info == -1 || 1.0 + rcond == 1.0)
+	      volatile double xrcond = rcond;
+	      xrcond += 1.0;
+	      retval(0) = ((info == -1 || xrcond == 1.0)
 			   ? 0.0 : det.value ());
 	    }
 	}
@@ -105,19 +108,23 @@ of the reciprocal condition number if requested.\n\
       if (! error_state)
 	{
 	  int info;
-	  volatile double rcond = 0.0;
+	  double rcond = 0.0;
 
 	  if (nargout > 1)
 	    {
 	      ComplexDET det = m.determinant (info, rcond);
 	      retval(1) = rcond;
-	      retval(0) = ((info == -1 || 1.0 + rcond == 1.0)
+	      volatile double xrcond = rcond;
+	      xrcond += 1.0;
+	      retval(0) = ((info == -1 || xrcond == 1.0)
 			   ? Complex (0.0) : det.value ());
 	    }
 	  else
 	    {
 	      ComplexDET det = m.determinant (info);
-	      retval(0) = ((info == -1 | 1.0 + rcond == 1.0)
+	      volatile double xrcond = rcond;
+	      xrcond += 1.0;
+	      retval(0) = ((info == -1 || xrcond == 1.0)
 			   ? Complex (0.0) : det.value ());
 	    }
 	}
